# sdlc-harness

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  README.md  README.old.md  SDLC-END-TO-END-TEST-SCRIPT.md  push-test.txt  pyproject.toml
.claude-plugin/: marketplace.json
.design/: ADR-TEMPLATE.md  API-DOC-TEMPLATE.md  DESIGN-DOC-TEMPLATE.md  README.template.md  REQ-TEMPLATE.md  hands-on-guide.md
.github/: PULL_REQUEST_TEMPLATE.md  SDLC-with-Copilot-and-Azure.md  copilot-instructions.md  pr-form-validation.workflow.yml  reference-catalog.md
.github/instructions/: code-quality-csharp.instructions.md  code-quality-ts.instructions.md  code-quality-tsx.instructions.md  test-quality-go.instructions.md  test-quality-java.instructions.md  (+1 more)
.github/policies/: jit.yml
bench/: README.md  __init__.py  test-write-file.txt
docs/: agent-inventory.md  harness-design.md  orchestrator-states.md  placeholder-mapping.md  skill-inventory.md  workflow-guide.md
orchestrator/: __init__.py  evaluator.py  evaluator_config.py  generator.py  generator_prompts.py  llm_client.py  planner.py  planner_prompts.py  state_machine.py  types.py
schemas/: benchmark-report.schema.json  canary-spec.schema.json  cloud-pack.schema.json  evaluation-report.schema.json  execution-plan.schema.json  harness-config.schema.json
tests/: test_azure_pack_structure.py  test_cloud_pack_schema.py
tools/: bootstrap_harness.py  generate_terminal_images.py  run_benchmark.py  validate_canaries.py
vscode-extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package.json  plugin.json  reference-catalog.md
(+154 files in other folders)
