[project]
name = "sdlc-harness"
version = "0.1.0"
description = "SDLC Harness - Automated evaluation of AI coding assistants across SDLC phases"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bench*", "orchestrator*"]
exclude = ["tests*", "config*", "schemas*", "tools*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
